; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/mirror/extr_g_mirror.c_g_mirror_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/mirror/extr_g_mirror.c_g_mirror_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_class = type { i32 }

@shutdown_post_sync = common dso_local global i32 0, align 4
@g_mirror_shutdown_post_sync = common dso_local global i32 0, align 4
@SHUTDOWN_PRI_FIRST = common dso_local global i32 0, align 4
@g_mirror_post_sync = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [41 x i8] c"Warning! Cannot register shutdown event.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.g_class*)* @g_mirror_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @g_mirror_init(%struct.g_class* %0) #0 {
  %2 = alloca %struct.g_class*, align 8
  store %struct.g_class* %0, %struct.g_class** %2, align 8
  %3 = load i32, i32* @shutdown_post_sync, align 4
  %4 = load i32, i32* @g_mirror_shutdown_post_sync, align 4
  %5 = load %struct.g_class*, %struct.g_class** %2, align 8
  %6 = load i32, i32* @SHUTDOWN_PRI_FIRST, align 4
  %7 = call i32* @EVENTHANDLER_REGISTER(i32 %3, i32 %4, %struct.g_class* %5, i32 %6)
  store i32* %7, i32** @g_mirror_post_sync, align 8
  %8 = load i32*, i32** @g_mirror_post_sync, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 @G_MIRROR_DEBUG(i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32* @EVENTHANDLER_REGISTER(i32, i32, %struct.g_class*, i32) #1

declare dso_local i32 @G_MIRROR_DEBUG(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
